--- a/css/ecommerce.css
+++ b/css/ecommerce.css
@@ -106,13 +106,11 @@ marquee{
     text-align: center;  
 }
 
-input{
+.nav_login{
     border-radius: 5px;
     height: 35px;
-    background: #F5E8C7;
-    
-    box-shadow: 1px 1px #0000009d;
-    
+    background: #F5E8C7;    
+    box-shadow: 1px 1px #0000009d;    
     outline: none;
     color: black;
     border: 1px solid #0000009d     
@@ -132,7 +130,7 @@ input[type=password]{
 /* HEADER STARTS HERE */
 .header{
     background-color: #deba9daa;
-    height: 20vh; 
+    max-height: 20vh; 
     display: flex;  
     flex-direction: column;
     justify-content: center;
@@ -219,8 +217,67 @@ input:hover{
 }
 
 
-
 /* HEADER ENDS HERE */
+
+/* SIGNUP starts here*/
+
+.signup__form{
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding-top: 5rem;
+    
+}
+.signup__input-field{
+   padding: 1rem;
+}
+
+#signup__name{
+    padding: 10px;
+    border-radius: 5px;
+    height: 35px;
+    background: #F5E8C7;    
+    box-shadow: 1px 1px #0000009d;    
+    outline: none;
+    color: black;
+    border: 1px solid #0000009d   
+}
+.signup__name{    
+    border-radius: 5px;
+    height: 35px;
+    background: #F5E8C7;    
+    box-shadow: 1px 1px #0000009d;    
+    outline: none;
+    color: black;
+    border: 1px solid #0000009d   
+}
+
+.signup__forgoturpw{
+    
+    color: var(--text-color);
+}
+.signup__forgoturpw:hover{
+    
+    text-decoration: underline;
+}
+.signup__btn{
+    width: 15%;
+    height: 40px;
+    padding: 1px;
+    border: none;
+    outline: none;
+    cursor: pointer;   
+    color: #F5E8C7;
+    text-transform: capitalize;
+    font-size: 15px;
+    border-radius: 5px;
+    background: var(--text-color) 
+}
+
+/* SIGNUP ends here*/
 
 /* MAIN STARTS HERE */
 .main{
@@ -319,7 +376,7 @@ img{
 .footer{
     background-color: var(--text-color);
     height: 30vh;
-   /*  overflow-y: auto; */
+   
 }
 .footer__sec1{
     padding-top: 2rem;
@@ -436,14 +493,17 @@ h3{
     }
     .footer__p{
         padding-left: 1rem;
-    }     
+    }    
+    .nav_login{
+        width: 7rem;
+    } 
 }
 @media screen and (max-width:992px) {
 
     .nav{
         font-size: 14px;
     }
-    input{
+    .nav_login{
         width: 6rem;
     }
     ::placeholder{
@@ -510,4 +570,7 @@ h3{
    
     }
     
+    .signup__btn{
+        width: 20%;
+    }
 }
