--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
 /* header styling starts here */
 
 header {
-    position: fixed;
     background-color: #FFFFFF;
     height: 4.5rem;
     width: 100vw;
@@ -33,6 +32,12 @@ header {
     align-items: center;
     border: 1px solid;
     border-color: black;
+}
+
+header h1 {
+    color: black;
+    padding: 50px;
+    padding-left: 30px;
 }
 
 .nav-links {
@@ -108,29 +113,34 @@ button:hover {
     font-size: 30px;
 }
 
+.bx-shopping-bag-2 {
+    position: absolute;
+}
+
 @media(max-width: 1400px) {
     .nav-links__items {
         display: none;
-    }
-
-    .container {
-        display: block;
-        flex-wrap: nowrap;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
 
     }
+
+    header {
+        displa justify-content: center;
+    }
+
+
 }
+
+
 
 
 /*Styling Hamburger Icon*/
 .hamburger div {
     width: 30px;
     height: 3px;
-    background: #f2f5f7;
+    background: #1b1b1b;
     margin: 5px;
     transition: all 0.3s ease;
+
 }
 
 .hamburger {
@@ -138,8 +148,8 @@ button:hover {
 }
 
 /*Stying for small screens*/
-@media screen and (max-width: 1400px) {
-    nav {
+@media screen and (max-width: 1000px) {
+    header {
         position: fixed;
         z-index: 3;
     }
@@ -158,7 +168,7 @@ button:hover {
     .nav-links {
         position: fixed;
         background: black;
-        height: 50vh;
+        height: 80vh;
         width: 110%;
         flex-direction: column;
         clip-path: circle(50px at 90% -20%);
@@ -231,10 +241,7 @@ button:hover {
 
 /* main styling starts here */
 
-main {
-    background-color: white;
-    height: 1200px;
-}
+
 
 .container {
     padding: 50px;
@@ -249,11 +256,11 @@ main {
 }
 
 .product {
-    background-color: black;
+    background-color: white;
     border-radius: 10px;
     margin-top: 60px;
     transition: box-shadow .3s;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     float: left;
 
 
@@ -271,29 +278,17 @@ img {
     border-radius: 10px;
 }
 
-.shop-button {
-    height: 5rem;
-    width: 5rem;
-    border-radius: 50%;
-    background-color: white;
-    position: absolute;
-    margin: 8px;
-    opacity: 90%;
-    cursor: pointer;
+
+.buy {
+
+    color: white;
+    background-color: rgba(104, 85, 224, 1);
+    position: relat;
+    float: right;
+    width: 120px;
+    margin-right: 30px;
 
 
-}
-
-.shop-button:hover {
-    opacity: 100%;
-    transform: scale(1.1);
-    transition: 0.3s;
-}
-
-.shop-button i {
-
-    color: black;
-    margin: 25px;
 
 }
 
@@ -318,6 +313,12 @@ img {
 .product__name {
     font-size: 1.5rem;
     font-weight: bold;
+}
+
+.product h1,
+h2,
+p {
+    color: black;
 }
 
 footer {
@@ -390,15 +391,6 @@ footer p {
     transition: 0.3s;
 }
 
-
-.about-company p {
-    font-size: small;
-}
-
-.about-company h2 {
-    font-size: 20px;
-}
-
 .break {
     display: none;
 }
@@ -428,16 +420,14 @@ footer p {
     }
 
     .footer-col-1,
-    .footer-col-2 ul,
-    .about-company {
+    .footer-col-2 ul {
         display: flex;
         align-items: center;
         flex-direction: column;
     }
 
     .footer-col-1,
-    .footer-col-2,
-    .about-company {
+    .footer-col-2 {
         padding: 15px;
     }
 
