--- a/style.css
+++ b/style.css
@@ -523,6 +523,126 @@ align-items: center;
 .topsales__links:hover{
     text-decoration: underline;
 }
+
+/* shopping cart css starts here */
+
+.b-shopscart{
+    text-align: center;
+    height: 2rem;
+}
+.cart-container{
+    width: 100%;
+    height: 85%;
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0px 25px 40px #1687d933;
+    display: flex;
+    flex-direction: column;
+}
+.cart-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
+.cart__title{
+    font-size: 2rem;
+    font-weight: 800;
+    color: black;
+}
+.cart__remove{
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #E44C4C;
+    cursor: pointer;
+    border-bottom: 1px solid #E44C4C;
+}
+.cart-items{
+    margin: auto;
+    width: 90%;
+    height: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.cart-img{
+    width: 20%;
+}
+.cart-about{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+.cart-title{
+    padding-top: 0.5rem;
+    line-height: 1rem;
+    font-size: 1.3rem;
+    font-weight: 800;
+    color: #202020;
+}
+.cart-desc{
+    line-height: 1rem;
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: #909090;
+}
+.cart-counter{
+    width: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.btn-counter{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: #d9d9d9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: 900;
+    color: #202020;
+    cursor: pointer;
+}
+.count{
+    font-size: 2rem;
+    font-weight: 900;
+    color: #202020;
+}
+.cart-price{
+    height: 100%;
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+}
+.item-amount{
+    padding-top: 2rem;
+    font-size: 2.6rem;
+    font-weight: 800;
+    color: #202020;
+}
+.item-save{
+    padding-top: 0.5rem;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #1687d9;
+    cursor: pointer;
+}
+.item-remove{
+    padding-top: 0.5rem;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #E44C4C;
+    cursor: pointer;
+}
+
+
+
+/* shopping cart css ends here */
 /* for key frames starts here*/
 @keyframes glow{
     from {
