--- a/product-page/productPage.css
+++ b/product-page/productPage.css
@@ -563,6 +563,11 @@ body {
     font-size: 3vw;
   }
 
+  .footer__list li a {
+    font-size: 8vw;
+  }
+
+
   .contact-info p {
     text-align: center;
   }
