cart fixed size

--- a/online-shop/online-shop.css
+++ b/online-shop/online-shop.css
@@ -52,7 +52,7 @@ body {
 .cart__icon {
   color: antiquewhite;
   padding-left: 1rem;
-  font-size: 2.5rem;
+  font-size: 2.5vw;
 }
 
 /* nav bar end */
