--- a/cart-/cart.css
+++ b/cart-/cart.css
@@ -53,7 +53,7 @@ body {
 .cart__icon {
   color: antiquewhite;
   padding-left: 1rem;
-  font-size: 2.5rem;
+  font-size: 2.5vw;
 }
 
 /* nav bar end */
