--- a/product-page/productPage.css
+++ b/product-page/productPage.css
@@ -52,7 +52,7 @@ body {
 .cart__icon {
   color: antiquewhite;
   padding-left: 1rem;
-  font-size: 2.3rem;
+  font-size: 2.3vw;
 }
 /* nav bar end */
 
