--- a/styles/style.css
+++ b/styles/style.css
@@ -170,6 +170,7 @@ main > section{
     font-weight: 500;
     background-color: #688d804f;
     text-align: center;
+    text-transform: capitalize;
 }
 
 .welcome__btn{
@@ -246,7 +247,10 @@ main > section{
 }
 
 .about__content p {
-    background-color: var(--main-color3);
+    /* background-color: var(--main-color3); */
+    /* background-color: rgba(71, 128, 118, 0.888); */
+    background-color: #365953;
+    
     color: white;
     font-size: 1.4rem;
     text-align: justify;
@@ -282,8 +286,8 @@ main > section{
 
 .coffee-card{
     padding: var(--padding);
-    /* background-color: #b98775c0; */
     background-color: #664033;
+    background-color: #614E42;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -296,6 +300,10 @@ main > section{
    transform: scale(1.04);
 }
 
+.coffee-card:hover .coffee-card__content img{
+    filter: drop-shadow(1px 17px 25px #000000);
+}
+
 .coffee-card__header{
     font-size: 1.5rem;
     font-weight: 600;
@@ -306,6 +314,7 @@ main > section{
 .coffee-card__content p{
     text-align: justify;
     color: white;
+    font-size: 1.2rem;
 }
 
 .coffee-card__content img{
@@ -314,6 +323,7 @@ main > section{
     aspect-ratio: 3/4;
     display: block;
     margin: auto;
+    transition: filter 0.5s;
 }
 
 .coffee-card__footer > button{
