--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ img{
     max-width: 100%;
     display: block;
 }
+/*  */
 body {
     background-color: #333;
     font-family: 'Poppins', sans-serif;
