--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-    background: linear-gradient(rgba(85, 61, 103, 0.7), rgba(85, 61, 103, 0.7), rgb(36, 37, 130), rgba(85, 61, 103, 0.7), rgba(85, 61, 103, 0.7))
+    background-color: rgb(36, 37, 130);
 }
 
 .flex-main {
@@ -34,24 +34,24 @@ body {
 /* reset and common code end */
 
 /* header content start */
-header, .pages {
+.header {
     background-color: #242582;
     padding: 0.8rem 0;
     justify-content: space-around;
 }
 
-header a, .pages a {
+.header a {
     color: var(--text-color);
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
-header a:hover, .pages a:hover {
+.header a:hover {
     transform: scale(1.3);
     transition: 0.4s;
     color: gold;
 }
 
-header img, .pages img {
+.header img {
     border-radius: 50%;
     width: 1.5rem;
 }
@@ -60,13 +60,27 @@ header img, .pages img {
 /* navbar content start */
 .navbar {
     background-color: #553d67;
-    justify-content: space-between;
     padding: 0.5rem 1rem;
     position: sticky;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 1;
     font-size: 1.3rem;
+    gap: 2.5rem;
+}
+
+.navbar > a {
+    flex-grow: 1;
+    text-align: center;
+}
+
+.nav-links {
+    flex-grow: 4;
+    justify-content: space-between;
+}
+
+.user-nav {
+    gap: 0.5rem;
 }
 
 .logo {
@@ -97,23 +111,6 @@ header img, .pages img {
     transition: 0.4s;
     padding: 0.2rem;
 }
-
-.nav-links {
-    width: 55%;
-    justify-content: space-between;
-    border-radius: var(--items-border);
-}
-
-#user-list, #user-list-responsive, #site-list, #site-list-responsive {
-    display: none;
-}
-
-#user-list-responsive, #site-list-responsive {
-    flex-direction: column;
-    align-items: flex-start;
-    padding-top: 0.4rem;
-    gap: 0.4rem;
-}
 /* navbar content end */
 
 /* main content start */
@@ -126,14 +123,14 @@ header img, .pages img {
     scroll-margin-top: 2.5rem;
 }
 
-.wear {
+.warming {
     background-color: rgba(85, 61, 103, 0.7);
     grid-template-columns: repeat(3, 1fr);
     padding: 0.5rem;
     border-radius: var(--items-border);
 }
 
-#clothes h1, .wear h2, #shoes h1, #domestic-heating h1 {
+#clothes h1, .warming h2, #shoes h1, #domestic-heating h1 {
     background-color: rgb(36, 37, 130);
     color: var(--text-color);
     padding: 0.3rem 0.5rem;
@@ -142,49 +139,53 @@ header img, .pages img {
     margin: auto;
 }
 
-.wear__card {
+.warming__card {
     background-color: var(--text-color);
-    height: 60vh;
+    height: 59.5vh;
     flex-direction: column;
 }
 
-.wear__card:hover {
+.warming__card:hover {
     transform: scale(1.05);
     transition: 0.5s;
     box-shadow: 4px 6px 8px 5px rgb(36, 37, 130);
 }
 
-.wear__card img {
+.warming__card img {
     width: 100%;
     height: 50%;
     border: 1px solid gray;
 }
 
-.wear__card-description {
+.warming__card-description {
     height: 50%;
     flex-direction: column;
     justify-content: space-between;
     padding: 0.4rem;
 }
 
-.wear__card-description h3 {
+.warming__card-description h3 {
+    font-size: 1.5rem;
     text-align: center;
 }
 
-.wear__card-description h4 a {
+.warming__card-description p, .warming__card-description h4 {
+    font-size: 1rem;
+}
+
+.warming__card-description h4 a {
     color: rgb(36, 37, 130);
 }
 
-.wear__card-description h4 a:active {
+.warming__card-description h4 a:active {
     color: green;
 }
 
 marquee {
     background: linear-gradient(rgba(85, 61, 103, 0.7), rgba(85, 61, 103, 0.7), rgb(36, 37, 130), rgba(85, 61, 103, 0.7), rgba(85, 61, 103, 0.7));
-    height: 6vh;
     color: var(--text-color);
     font-size: x-large;
-    margin: 1rem 0;
+    padding: 1.3rem 0;
 }
 
 #shoes {
@@ -204,6 +205,7 @@ marquee {
     justify-content: space-around;
     gap: 1rem;
 }
+
 #footer a {
     color: var(--text-color);
 }
@@ -226,40 +228,9 @@ marquee {
 .fa-brands {
     font-size: x-large;
 }
-
-/* 
-.fa-facebook {
-    padding: 3px 2px;
-    padding-bottom: 1px;
-    background-color: #3b5998;
-}
-
-.fa-youtube {
-    color: #c4302b;
-}
-
-.fa-twitter {
-    color: #00acee;
-}
-
-.fa-instagram {
-    background: #f09433; 
-background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
-background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
-}
-
-.fa-linkedin {
-    color: #0A66C2;
-}
-
-.fa-whatsapp {
-    color: #25D366;
-} */
 /* footer content end */
 
-/* registration page start */
+/* about page start */
 
 .view {
     position: absolute;
@@ -273,39 +244,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', end
     opacity: 0.2;
 }
 
-.container, .container + p {
-    margin: 2rem auto;
-    width: 50%;
+.container {
     background-color: antiquewhite;
-    border: none;
-    text-align: center;
-    padding: 1rem;
     color: #242582;
+    width: 50%;
+    min-height: 75vh;
+    max-height: 80vh;
+    margin: 2rem auto 0 auto;
+    padding: 1rem;
     border-radius: 10%;
-    position: relative;
+    text-align: center;
     font-weight: bolder;
     font-size: larger;
+    overflow: auto;
 }
 
-label, .container span, input[id="male"], input[id="female"] {
-    position: absolute;
-    left: 12rem;
-}
-
-label[for="male"] {
-    left: 19.2rem;
-}
-
-input[id="male"] {
-    left: 22.5rem;
-}
-
-label[for="female"] {
-    left: 23.5rem;
-}
-
-input[id="female"] {
-    left: 28rem;
+.container p {
+    line-height: 1.7rem;
 }
 
 legend {
@@ -318,11 +273,13 @@ button {
     padding: 0.5rem;
     border-radius: 10px;
 }
-/* registration page end */
+/* about page end */
 
 /* other page start */
 dl {
     margin-top: 2.5rem;
+    text-align: left;
+    padding-left: 1rem;
 }
 
 dd {
@@ -335,11 +292,17 @@ dd li {
 }
 /* other page end */
 
+/* registration page start */
+textarea {
+    margin-top: 0.3rem;
+}
+/* registration page end */
+
 /* cart page start */
 .cart {
-    height: 80vh;
     background-image: url(/src/images/cart.png);
-    background-size: 100% 100%;
+    background-size: 100% 90%;
+    opacity: 0.7;
 }
 
 .cart legend {
@@ -349,7 +312,6 @@ dd li {
 }
 
 .cart h3 {
-    margin-top: 10rem;
     color: red;
     font-size: 2rem;
     font-weight: 900;
@@ -364,6 +326,7 @@ dd li {
     position: absolute;
     animation-duration: 2s;
     animation-iteration-count: infinite;
+    border-radius: 25%;
 }
 
 .shopping-cart1 {
@@ -390,478 +353,390 @@ dd li {
 
 @keyframes shopping-cart1 {
     to {
-        top: 10rem;
-        left: 10rem;}
+        top: 9rem;
+        left: 11rem;}
 }
 
 @keyframes shopping-cart2 {
     to {
-        top: 30rem;
-        left: 10rem;}
+        top: 29rem;
+        left: 11rem;}
 }
+
 @keyframes shopping-cart3 {
     to {
-        top: 10rem;
-        right: 10rem;}
+        top: 9rem;
+        right: 11rem;}
 }
 
 @keyframes shopping-cart4 {
     to {
-        top: 30rem;
-        right: 10rem;}
+        top: 29rem;
+        right: 11rem;}
 }
 /* cart page end */
 
 /* media query start */
-@media all and (max-width: 1480px) {
-    .wear__card-description h4 {
-        font-size: 0.9rem;
+@media all and (min-width: 1210px) and (max-width: 1460px) {
+    .warming__card-description h3 {
+        font-size: 1.1rem;
     }
 
-    .container {
-        width: 75%;
-    }
-
-    label, .container span, input[id="male"], input[id="female"] {
-        left: 10rem;
-    }
-    
-    label[for="male"] {
-        left: 17.2rem;
-    }
-    
-    input[id="male"] {
-        left: 20.5rem;
-    }
-    
-    label[for="female"] {
-        left: 21.5rem;
-    }
-    
-    input[id="female"] {
-        left: 26rem;
-    }
-}
-
-@media all and (max-width: 1340px) {
-    .wear__card-description h4 {
+    .warming__card-description p, .warming__card-description h4 {
         font-size: 0.8rem;
     }
 
+    marquee {
+        font-size: large;
+        padding: 0.5rem 0;
+    }
+
     .container {
-        width: 75%;
-    }
-
-    label, .container span, input[id="male"], input[id="female"] {
-        left: 8rem;
+        width: 65%;
     }
     
-    label[for="male"] {
-        left: 15.2rem;
-    }
-    
-    input[id="male"] {
-        left: 18.5rem;
-    }
-    
-    label[for="female"] {
-        left: 19.5rem;
-    }
-    
-    input[id="female"] {
-        left: 24rem;
-    }
-
-    .cart h3 {
-        margin-top: 0.5rem;;
-        font-size: small;
+    .cart legend {
+        padding: 0.4rem;
     }
 }
 
-@media all and (max-width: 1260px) {
+@media all and (max-width: 1210px) {
+    .warming__card {
+        height: auto;
+        min-height: 59.5vh;
+    }
+
+    #clothes, #shoes, #domestic-heating {
+        grid-template-columns: 1fr;
+    }
+
+    .warming__card-description h3 {
+        font-size: 2rem;
+    }
+
+    .warming__card-description p, .warming__card-description h4 {
+        font-size: 1.4rem;
+    }
+
+    .header {
+        padding: 0.7rem 0;
+    }
+
+    .header a {
+        font-size: 1.3rem;
+    }
+
+    .header img {
+        width: 1.3rem;
+    }
+
+    .navbar {
+        font-size: 1.2rem;
+        gap: 1.5rem;
+        padding: 0.5rem;
+    }
+
+    .logo {
+        font-size: 1rem;
+    }
+    
+    marquee {
+        font-size: large;
+        padding: 0.5rem 0;
+    }
+
+    .container {
+        width: 75%;
+        margin: 1rem auto 0rem auto;
+        padding: 0.5rem;
+    }
+    
+    .cart legend {
+        font-size: 1.1rem;
+        padding: 0.3rem;
+    }
+    
+    .cart h3 {
+        font-size: 1.2rem;
+    }
+    
+    .cart h3 {
+        margin-top: 1rem;
+    }
+
+    .shopping-cart2, .shopping-cart4 {
+        display: none;
+    }
+}
+
+@media all and (max-width: 1000px) {
+    .warming__card-description h3 {
+        font-size: 1.9rem;
+    }
+
+    .warming__card-description p, .warming__card-description h4 {
+        font-size: 1.3rem;
+    }
+
+    .header {
+        padding: 0.6rem 0;
+    }
+
+    .header a {
+        font-size: 1.2rem;
+    }
+
+    .header img {
+        width: 1.2rem;
+    }
+
+    .navbar {
+        gap: 1rem;
+        padding: 0.4rem;
+    }
+
+    .logo {
+        font-size: 0.9rem;
+    }
+
+    @keyframes shopping-cart1 {
+        to {
+            top: 6rem;
+            left: 8rem;}
+    }
+
+    @keyframes shopping-cart3 {
+        to {
+            top: 6rem;
+            right: 8rem;}
+    }
+}
+
+@media all and (max-width: 900px) {
+    .warming__card-description h3 {
+        font-size: 1.6rem;
+    }
+
+    .warming__card-description p, .warming__card-description h4 {
+        font-size: 1rem;
+    }
+
+    .header {
+        padding: 0.5rem 0;
+    }
+
+    .header a {
+        font-size: 1.1rem;
+    }
+
+    .header img {
+        width: 1.1rem;
+    }
+    
+    .navbar {
+        gap: 0.7rem;
+        padding: 0.3rem;
+    }
+
     .logo {
         display: none;
     }
 
+    .navbar > a {
+        flex-grow: 0;
+        text-align: left;
+    }
+    
+    .navbar a, .navbar i {
+        padding: 0.2rem;
+    }
+
     .nav-links {
-        width: 60%;
-    }
-
-    .wear {
-        grid-template-columns: repeat(2, 1fr);
-        padding: 0.3rem;
-    }
-
-    .wear__card-description h4 {
-        font-size: 1rem;
-    }
-
-    #footer {
-        font-size: small;
+        margin: 0 1rem;
     }
 
     .container {
-        width: 75%;
-    }
-
-    label, .container span, input[id="male"], input[id="female"] {
-        left: 4rem;
-    }
-    
-    label[for="male"] {
-        left: 11.2rem;
-    }
-    
-    input[id="male"] {
-        left: 14.5rem;
-    }
-    
-    label[for="female"] {
-        left: 15.5rem;
-    }
-    
-    input[id="female"] {
-        left: 20rem;
-    }
-
-    .cart h3 {
-        margin-top: 0.4rem;;
-        font-size: small;
+        padding: 0.3rem;
     }
 }
 
-@media all and (max-width: 962px) {
-    #user-nav {
-        display: none;
-    }
-
-    #user-list {
-        display: block;
-    }
-
-    .nav-links {
-        width: 75%;
-    }
-
-    .wear {
-        grid-template-columns: repeat(2, 1fr);
-        padding: 0.3rem;
-    }
-
-    .wear__card-description h3 {
-        font-size: 1rem;
-    }
-
-    .wear__card-description h4 {
-        font-size: 0.7rem;
-    }
-
-    marquee {
-        font-size: medium;
-    }
-
+@media all and (min-width: 769px) and (max-width: 840px) {
     #footer {
-        font-size: small;
-    }
-
-    .container {
-        width: 75%;
-    }
-
-    label, .container span, input[id="male"], input[id="female"] {
-        left: 3.5rem;
-    }
-    
-    label[for="male"] {
-        left: 10.7rem;
-    }
-    
-    input[id="male"] {
-        left: 14rem;
-    }
-    
-    label[for="female"] {
-        left: 15rem;
-    }
-    
-    input[id="female"] {
-        left: 19.5rem;
-    }
-
-    .cart h3 {
-        margin-top: 0.3rem;;
-        font-size: small;
+        font-size: 0.9rem;
     }
 }
 
 @media all and (max-width: 768px) {
-    #user-nav {
-        display: none;
+    .warming {
+        grid-template-columns: repeat(2, 1fr);
     }
 
-    #user-list {
-        display: block;
+    .warming__card-description h3 {
+        font-size: 1.9rem;
     }
 
-    .nav-links {
-        display: none;
+    .warming__card-description p, .warming__card-description h4 {
+        font-size: 1.3rem;
     }
 
-    #site-list {
-        display: block;
+    .header {
+        padding: 0.4rem 0;
     }
 
-    .pages a {
-        font-size: xx-small;
-    }
-
-    .container {
-        width: 75%;
-        font-size: x-small;
-    }
-
-    .wear {
-        grid-template-columns: 1fr;
-        padding: 0.3rem;
-    }
-
-    .wear__card-description h3 {
-        font-size: 0.8rem;
-    }
-
-    .wear__card-description h4 {
+    .header a {
         font-size: 1rem;
     }
 
-    .wear__card-description p {
+    .header img {
+        width: 1rem;
+    }
+    
+    .navbar {
         font-size: 0.8rem;
-    }
-
-    marquee {
-        font-size: medium;
+        gap: 0.5rem;
+        padding: 0;
     }
 
     #footer {
         flex-direction: column;
     }
-    
+
     #footer section:not(:nth-child(3)):after {
-        content: "-------------------------------------";
-    }
-
-    label, .container span, input[id="male"], input[id="female"] {
-        left: 4rem;
-    }
-    
-    label[for="male"] {
-        left: 11.2rem;
-    }
-    
-    input[id="male"] {
-        left: 13rem;
-    }
-    
-    label[for="female"] {
-        left: 14rem;
-    }
-    
-    input[id="female"] {
-        left: 16.5rem;
-    }
-
-    .cart h3 {
-        margin-top: 0.2rem;;
-        font-size: small;
-    }
-}
-
-@media all and (max-width: 520px) {
-    #user-nav {
-        display: none;
-    }
-
-    #user-list {
-        display: block;
-    }
-
-    .nav-links {
-        display: none;
-    }
-
-    #site-list {
-        display: block;
-    }
-    
-    .pages a {
-        font-size: x-small;
+        content: "------------------------------------------------";
     }
 
     .container {
+        margin: 0.5rem auto 0rem auto;
+        padding: 0.1rem;
+    }
+    
+    .cart legend {
+        font-size: 1rem;
+    }
+    
+    .cart h3 {
+        margin-top: 0.5rem;
+        font-size: 1rem;
+    }
+
+    @keyframes shopping-cart1 {
+        to {
+            top: 5.1rem;
+            left: 3rem;}
+    }
+    
+    @keyframes shopping-cart3 {
+        to {
+            top: 5.1rem;
+            right: 3rem;}
+    }
+}
+
+@media all and (max-width: 640px) {
+    .warming {
+        grid-template-columns: repeat(1, 1fr);
         width: 75%;
-        font-size: small;
+        margin: auto;
     }
 
-    .wear {
-        grid-template-columns: 1fr;
-        padding: 0.3rem;
+    .warming__card-description h3 {
+        font-size: 2.2rem;
     }
 
-    .wear h2 {
-        font-size: small;
-        padding: 0.5rem;
+    .warming__card-description p, .warming__card-description h4 {
+        font-size: 1.6rem;
     }
 
-    .wear__card-description h3 {
-        font-size: 0.6rem;
+    .header {
+        padding: 0.3rem 0;
     }
 
-    .wear__card-description h4 {
-        font-size: 0.7rem;
-    }
-
-    .wear__card-description p {
-        font-size: 0.6rem;
-    }
-
-    marquee {
-        font-size: medium;
-    }
-
-    #footer {
-        flex-direction: column;
-    }
-    
-    #footer section:not(:nth-child(3)):after {
-        content: "-------------------------------------";
-    }
-
-    label, .container span, input[id="male"], input[id="female"] {
-        left: 1.5rem;
-    }
-    
-    label[for="male"] {
-        left: 7rem;
-    }
-    
-    input[id="male"] {
-        left: 9.2rem;
-    }
-    
-    label[for="female"] {
-        left: 10rem;
-    }
-    
-    input[id="female"] {
-        left: 13rem;
-    }
-
-    .cart h3 {
-        margin-top: 0.1rem;;
-        font-size: small;
-    }
-}
-
-@media all and (max-width: 460px) {
-    .container {
-        width: 80%;
-    }
-
-    label, .container span, input[id="male"], input[id="female"] {
-        left: 0.2rem;
-    }
-    
-    label[for="male"] {
-        left: 5rem;
-    }
-    
-    input[id="male"] {
-        left: 7.2rem;
-    }
-    
-    label[for="female"] {
-        left: 8rem;
-    }
-    
-    input[id="female"] {
-        left: 11rem;
-    }
-
-    .cart h3 {
-        margin-top: 0.1rem;;
-        font-size: small;
-    }
-}
-
-@media all and (max-width: 380px) {
-    #user-nav {
-        display: none;
-    }
-
-    #user-list {
-        display: block;
-    }
-
-    .nav-links {
-        display: none;
-    }
-
-    #site-list {
-        display: block;
+    .header a {
+        font-size: 0.9rem;
     }
 
     .pages a {
         font-size: 0.5rem;
     }
+    
+    dl {
+        margin-top: 1.5rem;
+    }
+    
+    dd {
+        margin: 0.5rem 0 1.5rem 0;
+    }
 
-    .container {
-        width: 75%;
+    .header img {
+        width: 0.9rem;
+    }
+    
+    .navbar {
+        font-size: 0.5rem;
+        gap: 0.3rem;
+    }
+    
+    .cart legend {
+        font-size: 0.5rem;
+        padding: 0.2rem;
+    }
+    
+    .cart h3 {
         font-size: 0.7rem;
     }
 
-    .wear {
-        grid-template-columns: 1fr;
-        padding: 0.3rem;
-    }
-
-    marquee {
-        font-size: medium;
-    }
-
-    #footer {
-        flex-direction: column;
-    }
-
-    #footer section:not(:nth-child(3)):after {
-        content: "-------------------------------------";
-    }
-
-    .container {
-        width: 90%;
-    }
-
-    label, .container span, input[id="male"], input[id="female"] {
-        left: 0.2rem;
-    }
-    
-    label[for="male"] {
-        left: 5rem;
-    }
-    
-    input[id="male"] {
-        left: 7.2rem;
-    }
-    
-    label[for="female"] {
-        left: 8rem;
-    }
-    
-    input[id="female"] {
-        left: 11rem;
-    }
-
-    .cart h3 {
-        margin-top: 0.1rem;;
-        font-size: small;
+    .shopping-cart1, .shopping-cart3 {
+        top: 3rem;
+        width: 2rem;
+        height: 2rem;
     }
 }
-/* media query end */
+
+@media all and (max-width: 480px) {
+
+    .warming__card-description h3 {
+        font-size: 1.6rem;
+    }
+
+    .warming__card-description p, .warming__card-description h4 {
+        font-size: 0.9rem;
+    }
+
+    .header {
+        padding: 0.2rem 0;
+    }
+
+    .header a {
+        font-size: 0.7rem;
+    }
+
+    .pages a {
+        font-size: 0.3rem;
+    }
+    
+    dl {
+        margin-top: 0.5rem;
+    }
+    
+    dd {
+        margin: 0.5rem 0 1rem 0;
+    }
+
+    .header img {
+        width: 0.6rem;
+    }
+    
+    .navbar {
+        font-size: 0.3rem;
+        gap: 0.1rem;
+    }
+    
+    .cart legend {
+        font-size: 0.3rem;
+        padding: 0.1rem;
+    }
+    
+    .cart h3 {
+        font-size: 0.5rem;
+    }
+}
