--- a/style.css
+++ b/style.css
@@ -17,10 +17,13 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 20px 10%;
+  background-color: #ecfef1;
 }
 
 .logo {
   max-width: 120px;
+  height: auto;
+  color: #8a2be2;
 }
 
 .nav {
@@ -28,12 +31,12 @@ header {
 }
 
 .nav a {
-  color: rgb(55, 54, 54);
+  color: rgb(0, 0, 0);
   font-size: 16px;
   text-transform: capitalize;
   padding: 10px 20px;
-  font-weight: 400;
-  transition: all 0.42s ease;
+  font-weight: 600;
+  transition: all 0.4s ease;
 }
 
 .nav a:hover {
@@ -47,7 +50,7 @@ header {
 
 .nav-icon i {
   margin-right: 20px;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 400;
   color: rgb(55, 54, 54);
   transition: all 0.4 ease;
@@ -59,8 +62,257 @@ header {
 }
 
 #menu-icon {
-  font-size: 36px;
+  font-size: 25px;
   z-index: 10001;
   cursor: pointer;
   color: rgb(55, 54, 54);
+}
+
+section {
+  padding: 5% 10%;
+  background-color: #e2edef;
+}
+
+.main-home {
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/brown.jpg);
+  background-position: center;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+}
+.main-text h5 {
+  color: rgb(200, 65, 65);
+  font-size: 16px;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+
+.main-text h1 {
+  color: black;
+  font-size: 65px;
+  text-transform: capitalize;
+  line-height: 1.1;
+  font-weight: 600;
+  margin: 6px 0 10px;
+}
+
+.main-text p {
+  font-size: 18px;
+  margin-bottom: 20px;
+  font-style: italic;
+  color: black;
+}
+
+.main-btn {
+  display: inline-block;
+  font-weight: 500;
+  text-transform: capitalize;
+  padding: 12px 25px;
+  font-size: 16px;
+  color: brown;
+  border: 2px solid black;
+  transition: all 0.4s ease;
+}
+
+.main-btn:hover {
+  background-color: rgb(93, 93, 251);
+  color: white;
+}
+.down-arrow {
+  position: absolute;
+  top: 85%;
+  right: 11%;
+}
+.down i {
+  font-size: 30px;
+  color: brown;
+  border: 2px solid black;
+  border-radius: 50px;
+  padding: 12px 12px;
+}
+.down i:hover {
+  background-color: blueviolet;
+  color: aliceblue;
+  transition: all 0.4s ease;
+}
+
+.center-text h2 {
+  color: black;
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.center-text span {
+  color: #8a2be2;
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+  gap: 2rem;
+}
+.row {
+  position: relative;
+  transition: all 0.4s;
+}
+.row img {
+  width: 100%;
+  height: auto;
+  transition: all 0.4s;
+}
+.row img:hover {
+  transform: scale(0.9);
+}
+.product-text h5 {
+  position: absolute;
+  top: 14px;
+  left: 14px;
+  color: white;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: red;
+  padding: 3px 10px;
+  border-radius: 2px;
+}
+
+.heart-icon {
+  position: absolute;
+  right: 0;
+  font-size: 20px;
+}
+.heart-icon:hover {
+  color: red;
+}
+.rating i {
+  color: rgb(243, 190, 92);
+  font-size: 18px;
+}
+.price h4 {
+  color: black;
+  font-size: 18px;
+  font-weight: 400;
+}
+.price p {
+  color: black;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.trending-cat-text h2 {
+  text-align: center;
+  color: black;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.cart img {
+  width: 380px;
+  height: auto;
+  border-radius: 5px;
+}
+
+.update-cart {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(380px, auto));
+  gap: 1rem;
+}
+
+.cart h5 {
+  color: #5c616a;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.cart h4 {
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.cart p {
+  color: #707070;
+  font-size: 17px;
+  min-width: 380px;
+  line-height: 25px;
+  margin-bottom: 12px;
+}
+
+.cart h6 {
+  cursor: pointer;
+}
+
+.footer {
+  background-color: #f3f4f6;
+}
+
+.footer-info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, auto));
+  gap: 3rem;
+}
+
+.footer-info h1 {
+  width: 140px;
+  height: auto;
+}
+
+.footer-info h3 {
+  color: black;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.footer-info p {
+  font-weight: 400;
+  font-size: 14px;
+  color: #565656;
+  cursor: pointer;
+  line-height: 1.5;
+  margin-bottom: 10px;
+  transition: all 0.42s;
+}
+
+.footer-info p:hover {
+  color: #8a2be2;
+}
+
+.social-icon i {
+  color: #8a2be2;
+  margin-right: 10px;
+  font-size: 20px;
+  transition: all 0.4s;
+}
+.social-icon i:hover {
+  transform: scale(1.3);
+}
+
+.copyright {
+  background-color: #edfff1;
+  text-align: left;
+  padding: 20px;
+}
+
+@media (max-width: 890) {
+  header {
+    padding: 20px 3%;
+    transition: 0.4s;
+  }
+}
+
+@media (max-width: 890) {
+  .main-text h1 {
+    font-size: 50px;
+    transition: 0.4s;
+  }
+  .main-text p {
+    font-size: 18px;
+    transition: 0.4s;
+  }
 }
