--- a/styles.css
+++ b/styles.css
@@ -23,18 +23,22 @@ html {
 
 /* header starts here */
 
-.announcement {
-  z-index: 9;
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-  transition: 0.5s ease-out;
-}
-
-.header > .header__left {
+header > .header__left {
   display: flex;
   gap: 2.5rem;
   padding: 2rem;
+}
+
+header nav a {
+  color: rgb(44, 40, 40);
+}
+header nav a:hover {
+  padding: 5px;
+  border-radius: 0.8px;
+  background-color: rgb(250, 235, 215);
+  color: rgb(206, 67, 67);
+  transition-duration: 150ms;
+  box-sizing: border-box;
 }
 
 header {
@@ -45,12 +49,13 @@ header {
   z-index: 10;
   position: fixed;
   width: 100%;
+  height: auto;
 }
 
 header .header__right {
   display: flex;
   align-items: center;
-  padding-right: 20px;
+  padding-right: 35px;
   gap: 1.5rem;
   font-size: 30px;
 }
@@ -60,21 +65,16 @@ header .header__right {
 /* main starts here */
 
 main {
-  grid-area: m;
-  height: 100vh;
-}
-
-main {
   height: 100vh;
   color: white;
   background-image: url(./images/fashion.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 
 .banner {
-  position: relative;
   top: 15rem;
   color: rgba(0, 0, 0);
   padding: 3rem 1rem;
@@ -88,6 +88,9 @@ main {
   margin-top: 20px;
 }
 
+.banner h1 {
+  color: red;
+}
 .badge {
   background-color: rgb(44, 40, 40);
   color: white;
@@ -161,6 +164,11 @@ main {
   width: 650px;
   height: 60px;
   border-style: none;
+}
+
+.shopping .shopping__btn:hover {
+  background-color: rgb(189, 185, 185);
+  transition: all 300ms ease-in-out;
 }
 
 .shopping .shopping__btn--buy {
