--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
   justify-content: space-between;
   padding: 20px 10%;
   background-color: #ecfef1;
+  opacity: 0.7;
 }
 
 .logo {
@@ -160,9 +161,10 @@ section {
   transition: all 0.4s;
 }
 .row img {
-  width: 100%;
-  height: auto;
+  width: 80%;
+  height: 80%;
   transition: all 0.4s;
+  background-size: cover;
 }
 .row img:hover {
   transform: scale(0.9);
@@ -283,10 +285,14 @@ section {
   color: #8a2be2;
 }
 
+.icon-text {
+  text-align: center;
+}
+
 .social-icon i {
   color: #8a2be2;
   margin-right: 10px;
-  font-size: 20px;
+  font-size: 30px;
   transition: all 0.4s;
 }
 .social-icon i:hover {
@@ -306,7 +312,7 @@ section {
   }
 }
 
-@media (max-width: 890) {
+@media (max-width: 650) {
   .main-text h1 {
     font-size: 50px;
     transition: 0.4s;
@@ -314,5 +320,32 @@ section {
   .main-text p {
     font-size: 18px;
     transition: 0.4s;
+  }
+  .main-btn {
+    padding: 10px 20px;
+    transition: 0.4s;
+  }
+}
+
+@media (max-width: 750px) {
+  .nav {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    width: 300px;
+    height: 130vh;
+    background: #edfff1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 120px 30px;
+    transition: all 0.4s;
+  }
+  .nav a {
+    display: block;
+    margin: 18px 0;
+  }
+  .nav.open {
+    right: 0;
   }
 }
